# RAG-Test-OrVD

./: .env.example  .gitignore  AGENTS.md  API_CONTRACTS.md  ARCHITECTURE.md  CODEBASE_MAP.md  CONTRIBUTING.md  DOMAIN_GLOSSARY.md  PROMPTS.md  README.md  TESTING.md  copilot-instructions.md  docker-compose.yml
app/: .dockerignore  Dockerfile  Dockerfile.ingest-a  Dockerfile.ingest-b  Dockerfile.ingest-base  Dockerfile.ingest-os-base  Dockerfile.support-api  Dockerfile.support-api-base  Dockerfile.support-api-os-base  pyproject.toml
app/src/: main.py
app/src/api/: ask.py  ingest_a.py  ingest_b.py  ocr.py  schemas.py  sources.py
app/src/core/: logging.py  request_context.py  settings.py
app/src/embeddings/: client.py
app/src/ingest/: chunking.py  dedup_hash.py  pipeline_a.py  pipeline_b.py  pipeline_common.py
app/src/llm/: client.py
app/src/rag/: answer_formatter.py  orchestrator.py  prompt_builder.py  retriever.py  trace_card.py
app/src/reranker/: client.py
app/src/storage/: postgres_repo.py  qdrant_repo.py
app/src/telemetry/: metrics.py
app/src/vision/: __init__.py  service.py
app/tests/: conftest.py
app/tests/integration/: test_ask_endpoint.py  test_ingest_endpoints.py  test_main_helpers.py  test_multimodal_endpoint_parity.py  test_openai_compat.py  test_sources_download.py  test_vision_prompt_snapshot_parity.py  vision_eval.py
app/tests/unit/: test_answer_formatter.py  test_chunking.py  test_configure_logging.py  test_dedup_hash.py  test_doc_converter.py  test_docx_parser.py  test_embeddings_client.py  test_llm_client.py  test_llm_client_extra.py  test_logging_filters.py  test_metrics.py  test_orchestrator.py  test_pdf_parser.py  test_pipeline_common.py  test_postgres_repo.py  test_prompt_builder.py  test_qdrant_repo.py  test_request_context.py  test_reranker_client.py  (+6 more)
(+75 files in other folders)
