[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-ans-support-api"
version = "0.1.0"
description = "Офлайн RAG API для первой линии поддержки ЦСВ АНС"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "httpx==0.27.2",
  "qdrant-client==1.11.3",
  "sentence-transformers==3.2.0",
  "python-multipart==0.0.12",
  "python-docx==1.1.2",
  "pypdf==5.0.1",
  "PyMuPDF==1.24.13",
  "prometheus-client==0.21.0",
  "psycopg[binary]==3.2.3",
  "torch==2.5.1",
  "transformers==4.57.1",
  "paddleocr==2.8.1",
  "paddlepaddle==2.6.2",
  "pillow==10.4.0"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]


[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-cov==5.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "unit: fast isolated tests",
  "integration: tests with external services",
  "slow: longer-running tests"
]
